# obfuscation-toolbox

./: .gitignore  CHANGELOG.md  README.md  pyproject.toml
.github/workflows/: ci.yml  release.yml
obfuscation_toolit/: __init__.py  cli.py
obfuscation_toolit/core/: __init__.py  base.py  registry.py
obfuscation_toolit/deobfuscate/: __init__.py  deobfuscate.py
obfuscation_toolit/obfuscate/: __init__.py  obfuscate.py
obfuscation_toolit/techniques/: __init__.py
obfuscation_toolit/techniques/arithmetic/: __init__.py  model.py
obfuscation_toolit/techniques/class_rename/: __init__.py  model.py
obfuscation_toolit/techniques/comment/: __init__.py  model.py
obfuscation_toolit/techniques/control_flow/: __init__.py  model.py
obfuscation_toolit/techniques/dead_code/: __init__.py  model.py
obfuscation_toolit/techniques/function_rename/: __init__.py  model.py
obfuscation_toolit/techniques/hex/: __init__.py  model.py
obfuscation_toolit/techniques/minify/: __init__.py  model.py
obfuscation_toolit/techniques/opaque_predicate/: __init__.py  model.py
obfuscation_toolit/techniques/string/: __init__.py  model.py
obfuscation_toolit/techniques/variable/: __init__.py  model.py
obfuscation_toolit/techniques/xor/: __init__.py  model.py
tests/: test_obfuscators.py
